# todo-cli

./: Cargo.toml  LICENSE.md  README.md  RELEASE.md
src/: commands.rs  errors.rs  main.rs  utils.rs
src/data/: help.rs  timer.rs  todos.rs
src/models/: help.rs  mod.rs  todo.rs
src/styles/: help.rs
src/utils/: format.rs  help.rs  mod.rs  terminal.rs  timer.rs  todos.rs
src/view/: help.rs  list.rs  todos.rs
