[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2"

[profile.release]
opt-level = 3         # performance optimization (1, 2, 3, "s", "z")
lto = true            # Link Time Optimization
codegen-units = 1     # slower compile, smaller binary
strip = true          # remove debug symbols (Rust ≥1.60)
panic = "abort"       # remove unwinding code
